action buttons done

--- a/components.html
+++ b/components.html
@@ -332,50 +332,66 @@
 <h2 class="text-xl uppercase p-4">Smaller Quote with Action Buttons</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
-        <div class="block text-clc-green text-xl my-4">"Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique."</div>
-        <div class="flex place-content-start pt-8">
-            <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 mr-4">Academic</a>
-            <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2">Wellbeing</a>
+    <div class="m-4 p-16 bg-white flex place-content-center">
+        <div class="max-w-4xl w-full">
+            <div class="max-w-lg">
+                <div class="block my-4 text-clc-green text-xl lg:text-2xl">"Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
+                    suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
+                    similique."</div>
+                <div class="flex place-content-start pt-8">
+                    <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 mr-4 text-md lg:text-xl">Academic</a>
+                    <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 text-md lg:text-xl">Wellbeing</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green">
-        <div class="block text-white text-xl my-4">"Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique."</div>
-        <div class="flex place-content-start pt-8">
-            <a href="#" class="text-white border-white border-[1px] px-8 py-2 mr-4">Academic</a>
-            <a href="#" class="text-white border-white border-[1px] px-8 py-2">Wellbeing</a>
+    <div class="m-4 p-16 bg-clc-green flex place-content-center">
+        <div class="max-w-4xl w-full">
+            <div class="max-w-lg">
+                <div class="block my-4 text-white text-xl lg:text-2xl">"Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
+                    suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
+                    similique."</div>
+                <div class="flex place-content-start pt-8">
+                    <a href="#" class="text-white border-white border-[1px] px-8 py-2 mr-4 text-md lg:text-xl">Academic</a>
+                    <a href="#" class="text-white border-white border-[1px] px-8 py-2 text-md lg:text-xl">Wellbeing</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
-        <div class="block text-clc-silver text-xl my-4">"Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique."</div>
-        <div class="flex place-content-start pt-8">
-            <a href="#" class="text-clc-silver border-clc-silver border-[1px] px-8 py-2 mr-4">Academic</a>
-            <a href="#" class="text-clc-silver border-clc-silver border-[1px] px-8 py-2">Wellbeing</a>
+    <div class="m-4 p-16 bg-clc-gray flex place-content-center">
+        <div class="max-w-4xl w-full">
+            <div class="max-w-lg">
+                <div class="block my-4 text-clc-silver text-xl lg:text-2xl">"Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
+                    suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
+                    similique."</div>
+                <div class="flex place-content-start pt-8">
+                    <a href="#" class="text-clc-silver border-clc-silver border-[1px] px-8 py-2 mr-4 text-md lg:text-xl">Academic</a>
+                    <a href="#" class="text-clc-silver border-clc-silver border-[1px] px-8 py-2 text-md lg:text-xl">Wellbeing</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
-        <div class="block text-clc-green text-xl my-4">"Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
-            suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
-            similique."</div>
-        <div class="flex place-content-start pt-8">
-            <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 mr-4">Academic</a>
-            <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2">Wellbeing</a>
+    <div class="m-4 p-16 bg-clc-pea flex place-content-center">
+        <div class="max-w-4xl w-full">
+            <div class="max-w-lg">
+                <div class="block my-4 text-clc-green text-xl lg:text-2xl">"Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
+                    suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis eligendi
+                    similique."</div>
+                <div class="flex place-content-start pt-8">
+                    <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 mr-4 text-md lg:text-xl">Academic</a>
+                    <a href="#" class="text-clc-green border-clc-green border-[1px] px-8 py-2 text-md lg:text-xl">Wellbeing</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
