Call to action done

--- a/components.html
+++ b/components.html
@@ -1447,37 +1447,33 @@
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
     <div class="m-4 p-0 bg-white">
-        <div class="flex items-stretch h-32">
-            <a href="#"
-                class="flex text-clc-green w-1/2 text-2xl uppercase border-r-[1px] border-clc-green text-center items-center justify-center">Visit</a>
-            <a href="#" class="flex text-clc-green w-1/2 text-2xl uppercase text-center items-center justify-center">Join</a>
+        <div class="flex items-stretch">
+            <a href="#" class="flex text-clc-green w-1/2 uppercase border-r-[1px] border-clc-green text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Visit</a>
+            <a href="#" class="flex text-clc-green w-1/2 uppercase text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Join</a>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
     <div class="m-4 p-0 bg-clc-green">
-        <div class="flex items-stretch h-32">
-            <a href="#"
-                class="flex text-white w-1/2 text-2xl uppercase border-r-[1px] border-white text-center items-center justify-center">Visit</a>
-            <a href="#" class="flex text-white w-1/2 text-2xl uppercase text-center items-center justify-center">Join</a>
+        <div class="flex items-stretch">
+            <a href="#" class="flex text-white w-1/2 uppercase border-r-[1px] border-white text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Visit</a>
+            <a href="#" class="flex text-white w-1/2 uppercase text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Join</a>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
     <div class="m-4 p-0 bg-clc-gray">
-        <div class="flex items-stretch h-32">
-            <a href="#"
-                class="flex text-clc-silver w-1/2 text-2xl uppercase border-r-[1px] border-clc-silver text-center items-center justify-center">Visit</a>
-            <a href="#" class="flex text-clc-silver w-1/2 text-2xl uppercase text-center items-center justify-center">Join</a>
+        <div class="flex items-stretch">
+            <a href="#" class="flex text-clc-silver w-1/2 uppercase border-r-[1px] border-clc-silver text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Visit</a>
+            <a href="#" class="flex text-clc-silver w-1/2 uppercase text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Join</a>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
     <div class="m-4 p-0 bg-clc-pea">
-        <div class="flex items-stretch h-32">
-            <a href="#"
-                class="flex text-clc-gray w-1/2 text-2xl uppercase border-r-[1px] border-clc-gray text-center items-center justify-center">Visit</a>
-            <a href="#" class="flex text-clc-gray w-1/2 text-2xl uppercase text-center items-center justify-center">Join</a>
+        <div class="flex items-stretch">
+            <a href="#" class="flex text-clc-gray w-1/2 uppercase border-r-[1px] border-clc-gray text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Visit</a>
+            <a href="#" class="flex text-clc-gray w-1/2 uppercase text-center items-center justify-center antialiased text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl p-8 lg:p-16 xl:p-24 2xl:p-30">Join</a>
         </div>
     </div>
 </section>
