Where next done

--- a/components.html
+++ b/components.html
@@ -1407,38 +1407,54 @@
 <h2 class="text-xl uppercase p-4">Where Next</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
-        <a href="#">
-            <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
-            <div class="text-clc-green uppercase inline-block w-full text-2xl mx-16">Co Curiccular</div>
-            <img src="/assets/pic8.jpg" class="ml-16 mt-16">
+    <div class="m-4 p-0 bg-white">
+        <a href="#" class="flex flex-col lg:flex-row">
+            <div class="py-16 px-32 lg:px-0 lg:pl-32 lg:w-1/2">
+                <div class="text-clc-silver uppercase text-2xl lg:text-3xl 2xl:text-4xl">Where next?</div>
+                <div class="text-clc-green uppercase text-2xl lg:text-3xl 2xl:text-4xl">Co Curiccular</div>
+            </div>
+            <div class="ml-32 lg:mt-16 lg:ml-0 lg:w-1/2 grow-0">
+                <img src="/assets/pic8.jpg" class="w-auto h-auto">
+            </div>
         </a>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green">
-        <a href="#">
-            <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
-            <div class="text-white uppercase inline-block w-full text-2xl mx-16">Practical Sciences</div>
-            <img src="/assets/pic11.jpg" class="ml-16 mt-16">
+    <div class="m-4 p-0 bg-clc-green">
+        <a href="#" class="flex flex-col lg:flex-row">
+            <div class="py-16 px-32 lg:px-0 lg:pl-32 lg:w-1/2">
+                <div class="text-clc-silver uppercase text-2xl lg:text-3xl 2xl:text-4xl">Where next?</div>
+                <div class="text-white uppercase text-2xl lg:text-3xl 2xl:text-4xl">Practical Sciences</div>
+            </div>
+            <div class="ml-32 lg:mt-16 lg:ml-0 lg:w-1/2 grow-0">
+                <img src="/assets/pic11.jpg" class="w-auto h-auto">
+            </div>
         </a>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
-        <a href="#">
-            <div class="text-clc-silver uppercase inline-block w-full text-2xl mx-16">Where next?</div>
-            <div class="text-white uppercase inline-block w-full text-2xl mx-16">History of Art</div>
-            <img src="/assets/pic5.jpg" class="ml-16 mt-16">
+    <div class="m-4 p-0 bg-clc-gray">
+        <a href="#" class="flex flex-col lg:flex-row">
+            <div class="py-16 px-32 lg:px-0 lg:pl-32 lg:w-1/2">
+                <div class="text-clc-silver uppercase text-2xl lg:text-3xl 2xl:text-4xl">Where next?</div>
+                <div class="text-white uppercase text-2xl lg:text-3xl 2xl:text-4xl">History of Art</div>
+            </div>
+            <div class="ml-32 lg:mt-16 lg:ml-0 lg:w-1/2 grow-0">
+                <img src="/assets/pic5.jpg" class="w-auto h-auto">
+            </div>
         </a>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
-        <a href="#">
-            <div class="text-clc-green uppercase inline-block w-full text-2xl mx-16">Where next?</div>
-            <div class="text-clc-gray uppercase inline-block w-full text-2xl mx-16">Live Performances</div>
-            <img src="/assets/pic6.jpg" class="ml-16 mt-16">
+    <div class="m-4 p-0 bg-clc-pea">
+        <a href="#" class="flex flex-col lg:flex-row">
+            <div class="py-16 px-32 lg:px-0 lg:pl-32 lg:w-1/2">
+                <div class="text-clc-green uppercase text-2xl lg:text-3xl 2xl:text-4xl">Where next?</div>
+                <div class="text-clc-gray uppercase text-2xl lg:text-3xl 2xl:text-4xl">Live Performances</div>
+            </div>
+            <div class="ml-32 lg:mt-16 lg:ml-0 lg:w-1/2 grow-0">
+                <img src="/assets/pic6.jpg" class="w-auto h-auto">
+            </div>
         </a>
     </div>
 </section>
