added form plugin and stats pullout done

--- a/components.html
+++ b/components.html
@@ -750,78 +750,96 @@
 <h2 class="text-xl uppercase p-4">Stats Pullout</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
-        <div class="text-6xl text-clc-green border-b-2 border-clc-silver py-6">
+
+
+    <div class="m-4 p-16 bg-white flex place-content-center">
+        <div class="max-w-6xl w-full lg:grid lg:grid-cols-3 lg:auto-rows-auto lg:gap-4">
+
+        <div class="text-6xl text-clc-green py-6 border-b-2 border-clc-silver lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">IB Results</div>
             <strong>73.1%</strong><br />
             40+ Points
         </div>
-        <div class="text-6xl text-clc-green border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-green py-6 border-b-2 border-clc-silver lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">A Level</div>
             <strong>43.2%</strong><br />
             A*
         </div>
-        <div class="text-6xl text-clc-green border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-green py-6 border-b-2 border-clc-silver lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">GCSE</div>
             <strong>80.1%</strong><br />
             9/8 | A*
+        </div>
+
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green">
-        <div class="text-6xl text-white border-b-2 border-white py-6">
+    <div class="m-4 p-16 bg-clc-green flex place-content-center">
+        <div class="max-w-6xl w-full lg:grid lg:grid-cols-3 lg:auto-rows-auto lg:gap-4">
+
+        <div class="text-6xl text-white border-b-2 border-white py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-white text-base inline-block w-20 pt-2">IB Results</div>
             <strong>73.1%</strong><br />
             40+ Points
         </div>
-        <div class="text-6xl text-white border-b-2 border-white py-6">
+        <div class="text-6xl text-white border-b-2 border-white py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-white text-base inline-block w-20 pt-2">A Level</div>
             <strong>43.2%</strong><br />
             A*
         </div>
-        <div class="text-6xl text-white border-b-2 border-white py-6">
+        <div class="text-6xl text-white border-b-2 border-white py-6 lg:border-b-0 lg:p-6">
             <div class="float-right text-white text-base inline-block w-20 pt-2">GCSE</div>
             <strong>80.1%</strong><br />
             9/8 | A*
         </div>
+
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
-        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6">
+    <div class="m-4 p-16 bg-clc-gray flex place-content-center">
+        <div class="max-w-6xl w-full lg:grid lg:grid-cols-3 lg:auto-rows-auto lg:gap-4">
+
+        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">IB Results</div>
             <strong>73.1%</strong><br />
             40+ Points
         </div>
-        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">A Level</div>
             <strong>43.2%</strong><br />
             A*
         </div>
-        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-silver border-b-2 border-clc-silver py-6 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-silver text-base inline-block w-20 pt-2">GCSE</div>
             <strong>80.1%</strong><br />
             9/8 | A*
         </div>
+
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
-        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6">
+    <div class="m-4 p-16 bg-clc-pea flex place-content-center">
+        <div class="max-w-6xl w-full lg:grid lg:grid-cols-3 lg:auto-rows-auto lg:gap-4">
+
+        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-gray text-base inline-block w-20 pt-2">IB Results</div>
             <strong>73.1%</strong><br />
             40+ Points
         </div>
-        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6 lg:border-r-2 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-gray text-base inline-block w-20 pt-2">A Level</div>
             <strong>43.2%</strong><br />
             A*
         </div>
-        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6">
+        <div class="text-6xl text-clc-gray border-b-2 border-clc-silver py-6 lg:border-b-0 lg:p-6">
             <div class="float-right text-clc-gray text-base inline-block w-20 pt-2">GCSE</div>
             <strong>80.1%</strong><br />
             9/8 | A*
+        </div>
+
         </div>
     </div>
 </section>
@@ -1085,6 +1103,13 @@
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
     <div class="m-4 p-16 bg-white">
+
+        <form>
+            <label>Label</label>
+            <input type="text" />
+            <button type="submit">Submit</button>
+        </form>
+
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
