and of day three

--- a/components.html
+++ b/components.html
@@ -67,6 +67,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Block Quote Block</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -212,6 +213,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Video Gradients</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -329,6 +331,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Smaller Quote with Action Buttons</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -747,6 +750,7 @@
 
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Stats Pullout</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -844,6 +848,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Typography Block</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -964,6 +969,7 @@
 
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Tables</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1144,6 +1150,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Highlight List</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1210,6 +1217,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Accordions</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1490,6 +1498,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Where Next</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1545,6 +1554,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Call to Action</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1580,6 +1590,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">To Top</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
@@ -1630,6 +1641,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Section Dividers</h2>
 <section>
     <h3 class="text-md px-4 text-right">White into Primary Brand Colour</h3>
@@ -1663,6 +1675,7 @@
 
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4">Footer</h2>
 <section>
     <div class="m-4 bg-clc-gray flex flex-col items-center">
