--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body id="top" class="smooth-scroll m-0 bg-clc-gray">
-    <section class="relative" x-data="{width: 'w-[640px] min-w-[640px]'}">
-    <div class="sticky top-0 bg-clc-gray w-full my-0 flex place-content-center gap-0 z-50 px-4">
+    <section class="relative" x-data="{width: 'w-[640px] min-w-[640px]'}">    
+    <div class="relative top-0 bg-clc-gray w-full my-0 flex place-content-center gap-0 z-50 px-4">
         <img src="/assets/CLC_Logo_Xsmall_White.svg" class="w-36 h-auto mr-20 cursor-pointer" x-on:click="document.getElementById('components').contentWindow.scrollTo({top: 0, behavior: 'smooth'})">
         <button id="default" title="sm"
         @click="width = 'w-[640px] min-w-[640px]'"
