updated jump menu

--- a/components.html
+++ b/components.html
@@ -10,7 +10,10 @@
 
 <body id="top" class="smooth-scroll m-0 bg-gray-100">
 
-<a href="#table" class="fixed top-1 right-1 bg-black text-white px-4 py-2 z-50">JUMP</a>
+<div class="fixed top-4 right-1">
+    <a href="#table" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">JUMP</a>
+    <a href="#top" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">TOP</a>
+</div>
 
 <h2 class="text-xl uppercase p-4" id="menu">Menu</h2>
 <section>
