--- a/components.html
+++ b/components.html
@@ -11,7 +11,7 @@
 <body id="top" class="smooth-scroll m-0 bg-gray-100">
 
 <div class="fixed top-4 right-1">
-    <a href="#table" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">JUMP</a>
+    <a href="#videopopout" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">JUMP</a>
     <a href="#top" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">TOP</a>
 </div>
 
@@ -71,6 +71,7 @@
     <div class="m-4 p-16 bg-clc-pea">
     </div>
 </section>
+
 
 <h2 class="text-xl uppercase p-4" id="textimage">Text with image</h2>
 <section>
@@ -423,65 +424,76 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4" id="videopopout">Larger Quote with Video Popout</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
-        <div class="block text-clc-green text-2xl my-4">"Lorem ipsum dolor sit amet consectetur
+
+
+    <div class="m-4 p-16 bg-white flex place-content-center">
+        <div class="max-w-6xl w-full">
+        <div class="block text-clc-green text-2xl my-4 lg:text-3xl xl:text-5xl xl:max-w-4xl">"Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
             suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
             eligendi
             similique."</div>
-        <div class="block text-xl text-clc-gray italic">Eve Jardine-Young</div>
-        <div class="block text-xl text-clc-gray italic">Principal</div>
+        <div class="block text-xl text-clc-gray italic lg:text-2xl xl:text-3xl">Eve Jardine-Young</div>
+        <div class="block text-xl text-clc-gray italic lg:text-2xl xl:text-3xl">Principal</div>
         <div class="flex place-content-end">
             <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2" /></a>
             <img src="/assets/eve.jpg" class="w-20 h-20 rounded-full m-2" />
+        </div>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green">
-        <div class="block text-white text-2xl my-4">"Lorem ipsum dolor sit amet consectetur
+    <div class="m-4 p-16 bg-clc-green flex place-content-center">
+        <div class="max-w-6xl w-full">
+        <div class="block text-white text-2xl my-4 lg:text-3xl xl:text-5xl xl:max-w-4xl">"Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
             suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
             eligendi
             similique."</div>
-        <div class="block text-xl text-white italic">Eve Jardine-Young</div>
-        <div class="block text-xl text-white italic">Principal</div>
+        <div class="block text-xl text-white italic lg:text-2xl xl:text-3xl">Eve Jardine-Young</div>
+        <div class="block text-xl text-white italic lg:text-2xl xl:text-3xl">Principal</div>
         <div class="flex place-content-end">
             <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2 grayscale" /></a>
             <img src="/assets/eve.jpg" class="w-20 h-20 rounded-full m-2" />
+        </div>
         </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
-        <div class="block text-white text-2xl my-4">"Lorem ipsum dolor sit amet consectetur
+    <div class="m-4 p-16 bg-clc-gray flex place-content-center">
+        <div class="max-w-6xl w-full">
+        <div class="block text-white text-2xl my-4 lg:text-3xl xl:text-5xl xl:max-w-4xl">"Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
             suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
             eligendi
             similique."</div>
-        <div class="block text-xl text-clc-silver italic">Eve Jardine-Young</div>
-        <div class="block text-xl text-clc-silver italic">Principal</div>
+        <div class="block text-xl text-clc-silver italic lg:text-2xl xl:text-3xl">Eve Jardine-Young</div>
+        <div class="block text-xl text-clc-silver italic lg:text-2xl xl:text-3xl">Principal</div>
         <div class="flex place-content-end">
             <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2 grayscale" /></a>
             <img src="/assets/eve.jpg" class="w-20 h-20 rounded-full m-2" />
         </div>
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
-        <div class="block text-clc-green text-2xl my-4">"Lorem ipsum dolor sit amet consectetur
+    <div class="m-4 p-16 bg-clc-pea flex place-content-center">
+        <div class="max-w-6xl w-full">
+        <div class="block text-clc-green text-2xl my-4 lg:text-3xl xl:text-5xl xl:max-w-4xl">"Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Sapiente, laudantium! Dolor assumenda culpa atque repellat,
             suscipit amet placeat deleniti dolorem rerum quasi commodi, enim repudiandae quo accusamus facilis
             eligendi
             similique."</div>
-        <div class="block text-xl text-clc-gray italic">Eve Jardine-Young</div>
-        <div class="block text-xl text-clc-gray italic">Principal</div>
+        <div class="block text-xl text-clc-gray italic lg:text-2xl xl:text-3xl">Eve Jardine-Young</div>
+        <div class="block text-xl text-clc-gray italic lg:text-2xl xl:text-3xl">Principal</div>
         <div class="flex place-content-end">
             <a href="#"><img src="/assets/player.jpg" class="w-20 h-20 rounded-full m-2" /></a>
             <img src="/assets/eve.jpg" class="w-20 h-20 rounded-full m-2" />
+        </div>
         </div>
     </div>
 </section>
@@ -1649,6 +1661,7 @@
     </div>
 </section>
 
+<!--done-->
 <h2 class="text-xl uppercase p-4" id="staff">Staff List</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
