added image with text

--- a/components.html
+++ b/components.html
@@ -10,9 +10,9 @@
 
 <body id="top" class="smooth-scroll m-0 bg-gray-100">
 
-<div class="fixed top-4 right-1">
-    <a href="#videopopout" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">JUMP</a>
-    <a href="#top" class="bg-black text-white px-4 py-2 z-50 m-1 text-xs">TOP</a>
+<div class="fixed top-4 right-1 z-50">
+    <a href="#textimage" class="bg-black text-white px-4 py-2 m-1 text-xs">JUMP</a>
+    <a href="#top" class="bg-black text-white px-4 py-2 m-1 text-xs">TOP</a>
 </div>
 
 <h2 class="text-xl uppercase p-4" id="menu">Menu</h2>
@@ -72,23 +72,61 @@
     </div>
 </section>
 
-
+<!--done-->
 <h2 class="text-xl uppercase p-4" id="textimage">Text with image</h2>
 <section>
     <h3 class="text-md px-4 text-right">White section background colour</h3>
-    <div class="m-4 p-16 bg-white">
+    <div class="m-4 p-0 bg-white">
+        <div class="grid lg:grid-cols-2 gap-x-4">
+            <div class="m-16 lg:mr-16 lg:ml-16 lg:mt-16 xl:ml-[25%] xl:mt-16 2xl:ml-[25%]">
+                <div class="text-clc-green uppercase xl:text-2xl 2xl:text-3xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatibus repellat distinctio, nisi, reiciendis at consequuntur molestiae harum blanditiis doloribus cumque quas debitis deleniti, maxime quidem nihil veritatis fugit culpa.</div>
+            </div>
+            <div class="lg:mb-16 xl:mb-24 2xl:mb-32 order-first lg:order-none ml-16 lg:ml-0">
+                <img src="/assets/pic9.jpg" class="w-auto h-auto">
+            </div>
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Primary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-green">
+    <div class="m-4 bg-clc-green">
+        <div class="grid lg:grid-cols-2 gap-x-4">
+            <div class="m-16 lg:mr-16 lg:ml-16 lg:mt-16 xl:ml-[25%] xl:mt-16 2xl:ml-[25%]">
+                <div class="text-white uppercase xl:text-2xl 2xl:text-3xl">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Ullam voluptatibus repellat distinctio, nisi, reiciendis at consequuntur molestiae harum
+                    blanditiis doloribus cumque quas debitis deleniti, maxime quidem nihil veritatis fugit culpa.</div>
+            </div>
+            <div class="lg:mb-16 xl:mb-24 2xl:mb-32 order-first lg:order-none ml-16 lg:ml-0">
+                <img src="/assets/pic6.jpg" class="w-auto h-auto">
+            </div>
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Tertiary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-gray">
+    <div class="m-4 bg-clc-gray">
+        <div class="grid lg:grid-cols-2 gap-x-4">
+            <div class="m-16 lg:mr-16 lg:ml-16 lg:mt-16 xl:ml-[25%] xl:mt-16 2xl:ml-[25%]">
+                <div class="text-white uppercase xl:text-2xl 2xl:text-3xl">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Ullam voluptatibus repellat distinctio, nisi, reiciendis at consequuntur molestiae harum
+                    blanditiis doloribus cumque quas debitis deleniti, maxime quidem nihil veritatis fugit culpa.</div>
+            </div>
+            <div class="lg:mb-16 xl:mb-24 2xl:mb-32 order-first lg:order-none ml-16 lg:ml-0">
+                <img src="/assets/pic7.jpg" class="w-auto h-auto">
+            </div>
+        </div>
     </div>
 
     <h3 class="text-md px-4 text-right">Quaternary section background colour</h3>
-    <div class="m-4 p-16 bg-clc-pea">
+    <div class="m-4 bg-clc-pea">
+        <div class="grid lg:grid-cols-2 gap-x-4">
+            <div class="m-16 lg:mr-16 lg:ml-16 lg:mt-16 xl:ml-[25%] xl:mt-16 2xl:ml-[25%]">
+                <div class="text-clc-green uppercase xl:text-2xl 2xl:text-3xl">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Ullam voluptatibus repellat distinctio, nisi, reiciendis at consequuntur molestiae harum
+                    blanditiis doloribus cumque quas debitis deleniti, maxime quidem nihil veritatis fugit culpa.</div>
+            </div>
+            <div class="lg:mb-16 xl:mb-24 2xl:mb-32 order-first lg:order-none ml-16 lg:ml-0">
+                <img src="/assets/pic8.jpg" class="w-auto h-auto">
+            </div>
+        </div>
     </div>
 </section>
 
